--- a/src/index.pug
+++ b/src/index.pug
@@ -2,16 +2,16 @@ doctype html
 html(lang='en')
     head
         meta(charset='UTF-8')
-        meta(name='application-name', content='Webcraft')
+        meta(name='application-name', content='Web Ray Casting Demo')
         meta(name='description', content='A simple Minecraft clone that runs in a web browser.')
-        meta(name='keywords', content='minecraft, webcraft, web, browser, game, clone')
+        meta(name='keywords', content='web, browser, game, ray, casting, html5, demo, canvas')
         meta(name='author', content='G\'lek Tarssza <glek@glektarssza.com>')
         meta(name='generator', content='Webpack')
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
         //- Do not permit viewport scaling (for now)
         meta(name='viewport', content='width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no')
         meta(name='robots', content='index, nofollow, noarchive')
-        title Webcraft
+        title Web Ray Casting Demo
         link(rel='stylesheet', href=require('./scss/index.scss'))
         script(src=require('./ts/index.ts'))
     body
